fix header on mobile screens

--- a/jekyll/assets/css/main.scss
+++ b/jekyll/assets/css/main.scss
@@ -1018,6 +1018,11 @@ blockquote {
     height: 25px;
   }
 
+  .pure-menu-list {
+    float: none;
+    padding-right: 0px;
+  }
+
   section#book img {
     max-width: 50%;
     margin-left: auto;
